<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bartender</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_btn_text">Gem</string>
    <string name="initials_label">Initialer</string>
    <string name="soda">Vand</string>
    <string name="beers">Øl</string>
    <string name="save_edit_btn_text">Gem ændringer</string>
    <string name="edit_header_label">Redigerer registrering fra -</string>
    <string name="saved_by_label">Oprettet af</string>
    <string name="delete_edit_btn_text">Slet</string>
    <string name="history_btn_text">Se historik</string>
    <string name="action_delete_all">Slet ALT</string>
    <string name="no_history">Historik databasen er tom</string>
    <string name="back_button_toast">Tryk på tilbage knappen igen for at lukke app\'en</string>
</resources>
