<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/edit_header_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_header_label" />

        <TextView
            android:id="@+id/edit_header_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="TEST DATA (time + date here)" />
        
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        
        <TextView
            android:id="@+id/saved_by_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/saved_by_label" />
        
        <EditText
            android:id="@+id/edit_initials_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="TEST DATA"
            android:inputType="textPersonName" />
        
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/edit_beer_plus_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/up_arrow_black"
            android:onClick="onBeerPlusBtnClick" />

        <Button
            android:id="@+id/edit_soda_plus_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/up_arrow_black"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onSodaPlusBtnClick" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/edit_beer_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/edit_soda_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/beer_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/beers"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/soda_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/soda"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style=" ?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/edit_beer_minus_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/down_arrow_black"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onBeerMinusBtnClick" />

        <Button
            android:id="@+id/edit_soda_minus_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/down_arrow_black"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onSodaMinusBtnClick" />
    </TableRow>

    

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/save_edit_btn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/save_edit_btn_text"
            android:onClick="onSaveBtnClick" />
        
        <Button
            android:id="@+id/save_edit_btn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_edit_btn_text"
            android:onClick="onDeleteBtnClick" />
    </TableRow>
</LinearLayout>